--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ license = "MIT"
 authors = ["netaneld122"]
 edition = "2018"
 
+[dependencies]
+nanoserde = "0.2.1"
+
 [dependencies.winapi]
 version = "0.3"
 features = [
