--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,45 +1,32 @@
 [package]
 name = "ddup"
-version = "0.0.4"
+version = "0.0.5"
 description = "Tool that detects potentially duplicated files in Windows NTFS volumes"
 license = "MIT"
-authors = ["netaneld122"]
+authors = ["netaneld122", "Small-Ku"]
 edition = "2018"
 
 [dependencies]
 nanoserde = "0.2.1"
 everything3-sys = { path = "everything3-sys" }
-
-[dependencies.winapi]
-version = "0.3"
-features = [
-    "std", 
-    "winuser", 
-    "winioctl", 
-    "ioapiset", 
+log = "0.4.29"
+env_logger = "0.11.8"
+crc = "3.4.0"
+clap = "4.5.54"
+glob = "0.3.0"
+walkdir = "2.3.1"
+indicatif = "0.18.3"
+rayon = "1.3.0"
+winapi = { version = "0.3", features = [
+    "std",
+    "winuser",
+    "winioctl",
+    "ioapiset",
     "errhandlingapi",
     "fileapi",
-    "handleapi",
     "handleapi",
     "winnt",
     "ntdef",
     "minwindef",
-]
-
-[dependencies.crc]
-version = "3.4.0"
-
-[dependencies.clap]
-version = "4.5.54"
-
-[dependencies.glob]
-version = "0.3.0"
-
-[dependencies.walkdir]
-version = "2.3.1"
-
-[dependencies.indicatif]
-version = "0.18.3"
-
-[dependencies.rayon]
-version = "1.3.0"
+] }
+snafu = "0.8.9"
