--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,16 +7,19 @@ authors = ["netaneld122", "Small-Ku"]
 edition = "2018"
 
 [dependencies]
-nanoserde = "0.2.1"
-everything3-sys = { path = "everything3-sys" }
-log = "0.4.29"
-env_logger = "0.11.8"
-crc = "3.4.0"
+blake3 = { version = "1.5.1", default-features = false, features = ["mmap"] }
 clap = "4.5.54"
+env_logger = "0.11.8"
+everything3-sys = { path = "everything3-sys" }
 glob = "0.3.0"
-walkdir = "2.3.1"
 indicatif = "0.18.3"
+log = "0.4.29"
+memmap2 = "0.9.9"
+nanoserde = "0.2.1"
+rapidhash = { version = "4.2.1", default-features = false, features = ["unsafe", "nightly"] }
 rayon = "1.3.0"
+snafu = "0.8.9"
+walkdir = "2.3.1"
 winapi = { version = "0.3", features = [
     "std",
     "winuser",
@@ -29,4 +32,3 @@ winapi = { version = "0.3", features = [
     "ntdef",
     "minwindef",
 ] }
-snafu = "0.8.9"
