--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ memmap2 = "0.9.9"
 nanoserde = "0.2.1"
 rapidhash = { version = "4.2.1", default-features = false, features = ["unsafe", "nightly"] }
 rayon = "1.3.0"
+simd-csv = "0.10.3"
 snafu = "0.8.9"
 walkdir = "2.3.1"
 winapi = { version = "0.3", features = [
